--- a/ProjectUAS/UAS.html
+++ b/ProjectUAS/UAS.html
@@ -262,7 +262,7 @@
     <h2 data-aos="fade-up">Customer Testimonials 🌟</h2>
     <div class="testimonial-grid">
       <div class="testi-card" data-aos="fade-up" data-aos-delay="100">
-        <p>“非常好吃”</p> <h4>- Lim Min Tan</h4>
+        <p>“非常好吃”</p> <h4>- Lim Kun Cui</h4>
       </div>
       <div class="testi-card" data-aos="fade-up" data-aos-delay="200">
         <p>“Best Vegan food ive ever had!!”</p> <h4>- Moriarti</h4>
@@ -709,7 +709,7 @@
       msg += `%0A*Total Estimasi: Rp ${total.toLocaleString('id-ID')}*`;
       msg += `%0A*Estimasi Pengiriman: ${deliveryDate}*`;
       msg += "%0A%0AMohon konfirmasi pembayarannya. Terima kasih!";
-      window.open(`https://wa.me/6281234567890?text=${msg}`);
+      window.open(`https://wa.me/62818895488?text=${msg}`);
     }
   </script>
 
